<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/num_pad_block"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/main_padding">

    <TextView
        android:id="@+id/number_field"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/num_field_height"
        android:background="@drawable/polar_light_background"
        android:ems="10"
        android:gravity="end"
        android:text="@string/default_number"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/display_num_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:backgroundTint="@color/light_gray"
            android:text="@string/b_cancel"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:backgroundTint="@color/light_gray"
            android:text="@string/b_abs"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:backgroundTint="@color/light_gray"
            android:text="@string/b_percent"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_orange"
            android:text="@string/b_division" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_seven" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_eight" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_nine" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_orange"
            android:text="@string/b_multiply" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_four" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_five" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_six" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_orange"
            android:text="@string/b_plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_one" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_two" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_three" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_orange"
            android:text="@string/b_minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="2.2"
            android:text="@string/b_zero" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:text="@string/b_comma" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/num_pad_style"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_orange"
            android:text="@string/b_equally" />
    </LinearLayout>


</LinearLayout>
